# gdvosk

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: main.yml
cmake/: GitVersionInfo.cmake  ccache.cmake  godot-helpers.cmake  mold.cmake  trim-sections.cmake
cmake/toolchains/: gcc-aarch64-linux-gnu.cmake  gcc-arm-linux-gnueabihf.cmake  gcc-linux-gnu.cmake  gcc-w64-mingw.cmake  mingw-w64-x86_64.cmake
gdextension/: CMakeLists.txt  template.gdextension.in
sample/: default_bus_layout.tres  icon.svg.import  main.tscn  project.godot  test-mono-16000.wav.import  test-mono-44100.wav.import  test-stereo-16000.wav.import  test-stereo-44100.raw  test-stereo-44100.wav.import
sample/addons/: .gitignore
src/: CMakeLists.txt  SpeechRecognizer.cpp  SpeechRecognizer.h  gdvosk.cpp  gdvosk.h
src/helpers/: auto_property.h  semaphore_lock.cpp  semaphore_lock.h
src/vosk/: VoskModel.cpp  VoskModel.h  VoskModelResourceLoader.cpp  VoskModelResourceLoader.h  VoskRecognizer.cpp  VoskRecognizer.h  VoskSpeakerModel.cpp  VoskSpeakerModel.h
